--- a/simplesocial/templates/index.html
+++ b/simplesocial/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Welcome to star social</h1>
-{% endblock  %}
+<h1 class="mb-10, pt-5">Welcome to star social</h1>
+{% endblock %}
